# fts_data_explorer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  app_state.cpp  app_state.h  config.h  main.cpp  main.cpp.backup  spectral_toolbox.cpp  spectral_toolbox.h  spectrum.cpp  spectrum.h  test_hilbert.cpp
adapters/: csv_adapter.cpp  csv_adapter.h
example_datasets/2025-06-12_15-17-10_reference_3mm_2.0mms_30avg/: comments.txt  interferogram.csv  measurementInfo.txt
example_datasets/2025-06-12_15-17-10_reference_3mm_2.0mms_30avg/raw_data/: raw_0.csv  raw_1.csv  raw_10.csv  raw_11.csv  raw_12.csv  raw_13.csv  raw_14.csv  raw_15.csv  raw_16.csv  raw_17.csv  raw_18.csv  raw_19.csv  raw_2.csv  raw_20.csv  raw_21.csv  raw_22.csv  raw_23.csv  raw_24.csv  raw_25.csv  raw_26.csv  raw_27.csv  raw_28.csv  raw_29.csv  raw_3.csv  raw_4.csv  raw_5.csv  raw_6.csv  raw_7.csv  raw_8.csv  raw_9.csv
example_datasets/2025-06-12_15-49-40_reference_3mm_0.5mms_30avg/: Thumbs.db  comments.txt  measurementInfo.txt
test_hilbert_comparison/: CMakeLists.txt  README.md  test_hilbert_comparison.cpp
test_hilbert_comparison/comparison_scripts/: simple_comparison.py
test_hilbert_comparison/python_reference/: hilbert_reference.py
test_hilbert_comparison/test_results/: dataset_comparison_cpp.json  dataset_comparison_python.json
